@@ -1,6 +1,6 @@
 /* This testcase is part of GDB, the GNU debugger.
 
-   Copyright 2010-2012 Free Software Foundation, Inc.
+   Copyright 2010 Free Software Foundation, Inc.
 
    Contributed by Pierre Muller.
 
